# scrapy-mercado-livre

./: LICENSE  README.md  pyproject.toml
data/: data.csv  data.json  data.jsonl  quotes.db
src/coleta/: settings.py
src/coleta/spiders/: mercadolivre.py
src/load/: main.py
src/transform/: main.py
