[project]
name = "scrapy-mercado-livre"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Lucas",email = "fabiolucamz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.52.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scrapy (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
